# self-dev

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  Makefile  PROJECT.md  PR_DESCRIPTION.md  README.md  idea.md  openhands-instructions.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  process-issue.yml
.openhands/: README.md  pre-commit.sh  repo.md  setup.sh
.openhands/microagents/: sip-development.md
docs/: github-token-setup.md  index.md  installation.md  pre-commit.md  usage.md
issues/: 18.md
scripts/: build_check.py  security_check.py
src/sip/: __init__.py  action_executor.py  cli.py  code_editor.py  config.py  core.py  github_client.py  issue_processor.py  live_session.py  llm_client.py  local_file_processor.py  meta_processor.py  models.py  sip.py  test_runner.py  utils.py
tests/: __init__.py  test_cli.py  test_code_editor_persistence.py  test_core.py  test_github_client.py  test_integration.py  test_live_session.py  test_local_file_processor.py  test_meta_processor.py  test_sip.py  test_utils.py
